{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 207,
  "lineage": "8b9ab4da-323c-c2a9-e476-7f7901c71429",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053db1ca12af5fffa",
            "association_id": "eipassoc-07398a8fe21b1328f",
            "domain": "vpc",
            "id": "eipalloc-053db1ca12af5fffa",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f00b32d6bfc61307",
            "private_dns": "ip-192-168-1-213.us-east-2.compute.internal",
            "private_ip": "192.168.1.213",
            "public_dns": "ec2-3-17-215-68.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.215.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP"
            },
            "tags_all": {
              "Name": "Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:582469332580:instance/i-09df86fba9e91d639",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09df86fba9e91d639",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "msi-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02528f8a3cf4dce9c",
            "private_dns": "ip-192-168-10-189.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9b34a982a7216e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ed6a5a8967f98ae",
            "tags": {
              "Name": "Private server 0"
            },
            "tags_all": {
              "Name": "Private server 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00380852e5e4e42cb"
            ]
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_nat_gateway.ohio-nat-gw",
            "aws_security_group.allow_traffic_sg",
            "aws_subnet.ohio-private-subnets",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:582469332580:instance/i-0a27b0933b12375b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a27b0933b12375b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "msi-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01498be289d8e3386",
            "private_dns": "ip-192-168-1-141.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.141",
            "public_dns": "ec2-3-145-172-182.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.172.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0074fb4be2683046d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d70e7995935a242",
            "tags": {
              "Name": "Public server 0"
            },
            "tags_all": {
              "Name": "Public server 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00380852e5e4e42cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_traffic_sg",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:582469332580:instance/i-00d7d6161cecf3c38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d7d6161cecf3c38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "msi-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a620505e75bb20b",
            "private_dns": "ip-192-168-2-176.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.176",
            "public_dns": "ec2-18-222-218-250.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.218.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f752c4dc41e0addd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e685cbc6b3f89ecc",
            "tags": {
              "Name": "Public server 1"
            },
            "tags_all": {
              "Name": "Public server 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00380852e5e4e42cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_traffic_sg",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ohio-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:internet-gateway/igw-0a1036808c5366696",
            "id": "igw-0a1036808c5366696",
            "owner_id": "582469332580",
            "tags": {
              "Name": "Ohio-igw"
            },
            "tags_all": {
              "Name": "Ohio-igw"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ohio-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053db1ca12af5fffa",
            "connectivity_type": "public",
            "id": "nat-059d63f2741f49cce",
            "network_interface_id": "eni-0f00b32d6bfc61307",
            "private_ip": "192.168.1.213",
            "public_ip": "3.17.215.68",
            "subnet_id": "subnet-07d70e7995935a242",
            "tags": {
              "Name": "Ohio NAT GW"
            },
            "tags_all": {
              "Name": "Ohio NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohio-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:route-table/rtb-0e6a8d0086afe8861",
            "id": "rtb-0e6a8d0086afe8861",
            "owner_id": "582469332580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059d63f2741f49cce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ohio-route-table-private"
            },
            "tags_all": {
              "Name": "ohio-route-table-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_nat_gateway.ohio-nat-gw",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ohio-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:route-table/rtb-074500d17a227fee1",
            "id": "rtb-074500d17a227fee1",
            "owner_id": "582469332580",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1036808c5366696",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ohio-route-table-public"
            },
            "tags_all": {
              "Name": "ohio-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ohio-igw",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohio-rt-asso-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6f17e1cf5a70030",
            "route_table_id": "rtb-074500d17a227fee1",
            "subnet_id": "subnet-07d70e7995935a242"
          },
          "dependencies": [
            "aws_internet_gateway.ohio-igw",
            "aws_route_table.ohio-route-table-public",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a2206be3ad20269",
            "route_table_id": "rtb-074500d17a227fee1",
            "subnet_id": "subnet-0e685cbc6b3f89ecc"
          },
          "dependencies": [
            "aws_internet_gateway.ohio-igw",
            "aws_route_table.ohio-route-table-public",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d61aa4f6b0564a4",
            "route_table_id": "rtb-074500d17a227fee1",
            "subnet_id": "subnet-09722688411b936df"
          },
          "dependencies": [
            "aws_internet_gateway.ohio-igw",
            "aws_route_table.ohio-route-table-public",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc481d1f6f06f097",
            "route_table_id": "rtb-074500d17a227fee1",
            "subnet_id": "subnet-0d622feb6cc7a5eda"
          },
          "dependencies": [
            "aws_internet_gateway.ohio-igw",
            "aws_route_table.ohio-route-table-public",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ohio-rt-asso-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaa1140bfa3e29e0",
            "route_table_id": "rtb-0e6a8d0086afe8861",
            "subnet_id": "subnet-01ed6a5a8967f98ae"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_nat_gateway.ohio-nat-gw",
            "aws_route_table.ohio-route-table-private",
            "aws_subnet.ohio-private-subnets",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fb371ddbd7f3033",
            "route_table_id": "rtb-0e6a8d0086afe8861",
            "subnet_id": "subnet-0d8f9facce80100a1"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_nat_gateway.ohio-nat-gw",
            "aws_route_table.ohio-route-table-private",
            "aws_subnet.ohio-private-subnets",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038bebf1aa50f8d4b",
            "route_table_id": "rtb-0e6a8d0086afe8861",
            "subnet_id": "subnet-00661891d919a06e1"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_internet_gateway.ohio-igw",
            "aws_nat_gateway.ohio-nat-gw",
            "aws_route_table.ohio-route-table-private",
            "aws_subnet.ohio-private-subnets",
            "aws_subnet.ohio-public-subnets",
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_traffic_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:security-group/sg-00380852e5e4e42cb",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 55,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55
              }
            ],
            "id": "sg-00380852e5e4e42cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1344,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1344
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3568,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3568
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 55,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 55
              }
            ],
            "name": "allow_sg",
            "name_prefix": "",
            "owner_id": "582469332580",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_All"
            },
            "tags_all": {
              "Name": "Allow_All"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohio-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-01ed6a5a8967f98ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ed6a5a8967f98ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-private-subent-1"
            },
            "tags_all": {
              "Name": "Ohio-private-subent-1"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-0d8f9facce80100a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8f9facce80100a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-private-subent-2"
            },
            "tags_all": {
              "Name": "Ohio-private-subent-2"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-00661891d919a06e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00661891d919a06e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-private-subent-3"
            },
            "tags_all": {
              "Name": "Ohio-private-subent-3"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ohio-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-07d70e7995935a242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d70e7995935a242",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-public-subent-1"
            },
            "tags_all": {
              "Name": "Ohio-public-subent-1"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-0e685cbc6b3f89ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e685cbc6b3f89ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-public-subent-2"
            },
            "tags_all": {
              "Name": "Ohio-public-subent-2"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-09722688411b936df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09722688411b936df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-public-subent-3"
            },
            "tags_all": {
              "Name": "Ohio-public-subent-3"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:subnet/subnet-0d622feb6cc7a5eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d622feb6cc7a5eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582469332580",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ohio-public-subent-4"
            },
            "tags_all": {
              "Name": "Ohio-public-subent-4"
            },
            "vpc_id": "vpc-0bce1dbf95e4288c2"
          },
          "dependencies": [
            "aws_vpc.ohio-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ohio-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:582469332580:vpc/vpc-0bce1dbf95e4288c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-088aa774307082dd6",
            "default_route_table_id": "rtb-03eb16df0c7a45fd6",
            "default_security_group_id": "sg-057d821f3c8bc07f5",
            "dhcp_options_id": "dopt-0dbb62d27ee4f5374",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bce1dbf95e4288c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03eb16df0c7a45fd6",
            "owner_id": "582469332580",
            "tags": {
              "Name": "Ohio-VPC"
            },
            "tags_all": {
              "Name": "Ohio-VPC"
            }
          }
        }
      ]
    }
  ]
}